[project]
name = "raysdk-py"
version = "0.1.0"
description = "Python SDK for the RaySearch personal API service."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Kotodama", email = "jameswjj0416@gmail.com" },
]
dependencies = [
    "httpx>=0.27,<1",
    "jsonschema>=4.23",
    "pydantic>=2.7,<3",
]

[build-system]
requires = ["setuptools>=74"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["raysdk_py", "raysdk_py.monitors", "raysdk_py.research"]

[tool.setuptools.package-data]
raysdk_py = ["py.typed"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "ANN"]
ignore = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["raysdk_py"]
exclude = ["**/node_modules", "**/.*", "**/.venv", "**/__pycache__"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
